# weeklinc

./: README.md
backend/: .env.example  pyproject.toml
backend/api/: __init__.py  admin.py  apps.py  decorators.py  filtersets.py  models.py  permissions.py  schedules.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/api/auth/: __init__.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/api/docs/: __init__.py  apps.py  schemas.py  urls.py  views.py
backend/api/docs/templates/api/docs/: redoc.html  swagger.html
backend/api/generics/: __init__.py  test.py
backend/api/migrations/: 0001_initial.py
backend/settings/: settings.py  urls.py
backend/users/: __init__.py  admin.py  models.py  tests.py
backend/users/migrations/: 0001_initial.py
