[tool.poetry]
name = "weeklinc"
version = "0.1.0"
description = "One link for all your Weekly meetings."
authors = ["ritikrajdev <ritikrajdev761@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
djangorestframework = "^3.13.1"
python-dotenv = "^0.19.2"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
APScheduler = "^3.8.1"
django-filter = "^21.1"
drf-spectacular = "^0.21.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
